add pull quotes

--- a/src/index.html
+++ b/src/index.html
@@ -89,6 +89,17 @@
                 she says. They’re unusable, junk mixed in with the raw recyclables. And, sometimes, they’re hazardous. It’s not unusual for Phuong to
                 handle plastics coated with chemicals – like battery acid – that irritate her skin. She’s started wearing gloves and long-sleeve shirts for
                 that reason.</p>
+
+
+
+              </p>
+              <aside class="pquote">
+                  <blockquote>
+                      <b>“You should try to clean up the plastic so it’s not polluted. <br /> <br /> Don’t just export all of it.”<br /> <br /> – Phuong Nguyen</b>
+                  </blockquote>
+              </aside>
+
+
             <p>“You should try to clean up the plastic so it’s not polluted. Don’t just export all of it to Vietnam,” she says, jabbing a pair of cutting
                 shears into the air for punctuation.</p>
             <p>The “you” might be translated here as “Americans.” Or, more generally, as “the West.” But what Phuong means unequivocally is: anyone
@@ -184,15 +195,14 @@
             <p>In the 1950s, Minh Khai was a farming town. Locals called it làng khoai – the potato village – for the root vegetable, khoai, that
                 served as the region’s economic foundation. Once the Vietnam War began, however, the able-bodied young men of Minh Khai were called
                 to fight. The potato village was left to its women.</p>
+                <aside class="pquote2">
+                    <blockquote>
+                        <b>“Almost every craft village starts with some kind of clever person. <br /> <br /> The plastic recycling
+                            village, it really fits the mold.” <br /> <br /> – Michael DiGregorio</b>
+                    </blockquote>
+                </aside>
             <p>“Almost every craft village starts with some kind of clever person,” says DiGregorio. “The plastic recycling village, it really
-                fits the mold.”
-            </p>
-            <aside class="pquote">
-                <blockquote>
-                    <b>“Almost every craft village starts with some kind of clever person. <br /> <br /> The plastic recycling
-                        village, it really fits the mold.”</b>
-                </blockquote>
-            </aside>
+                fits the mold.”</p>
             <p>In Minh Khai’s case, that clever person was a widow who, during the war, collected her neighbors’ garbage. She filtered trash for
                 salvageable items and sold them for a profit. What she couldn’t sell, she saved, and soon her home was filled with hoarded scrap.
                 When the woman’s son returned from fighting in southern Vietnam, he took one look at his mother’s bottle caps and plastic bags and
@@ -223,7 +233,15 @@
             <p>Cam started collecting plastic from neighboring provinces when she was 20 years old; she jokes that she became a business owner
                 before she became a bride. Now she, her husband, and their four sons run a collection of businesses that incorporate every stage
                 of the process – from gathering and melting to pelletizing and printing new products from recovered plastic.</p>
+
+                <aside class="pquote">
+                    <blockquote>
+                        <b>“Before, we literally didn’t have a place to live. <br /> <br /> And now everyone has a big house, car, or motorcycle.” <br /> <br /> – Cam Le</b>
+                    </blockquote>
+                </aside>
+
             <p>“Before, we literally didn’t have a place to live,” she says. “And now everyone has a big house, car, or motorcycle.”</p>
+
             <p>Indeed, between mounds of debris, the streets of Minh Khai reveal unexpected flashes of wealth. Sleek SUVs navigate the narrow alleys,
                 flashing logos for Lexus, Mercedes, and Volkswagen. Near the town’s open-air market, an arcade houses a dozen flat screen monitors paired
                 with the latest gaming consoles. Beside the archway that marks an entrance to Minh Khai, a new four-story home is under construction.</p>
@@ -349,6 +367,15 @@
                 with blunt pragmatism.</p>
             <p>“I am well aware that this job is toxic,” Tuan says. He seems to think of the health hazards in Minh Khai as necessary business
                 expenses. In order to succeed in the short term, he says: “Obviously, I have to accept the risk.”</p>
+
+                <aside class="pquote2">
+                    <blockquote>
+                        <b>“I am well aware that this job is toxic. <br /> <br /> I have to accept the risk.”<br /> <br /> – Tuan Dinh</b>
+                    </blockquote>
+                </aside>
+
+
+
             <p>This is a sentiment echoed by many in Minh Khai, and elsewhere in Vietnam. In recent years, laborers have flocked from neighboring
                 provinces to find work in the growing recycling village.</p>
             <p>One machinist says he moved from Son La province, a 9-hour drive to the west, after leaving his job at a Chinese-owned plastics
@@ -403,17 +430,19 @@
             <p>In the United States, these bans kicked off a flurry of media coverage. Throughout the spring of 2019, national news outlets
                 called attention to the practice of outsourcing recyclables. (Sometimes, raising more questions than answers. “Your Recycling
                 Gets Recycled, Right?” one New York Times headline queried. Another: “As China Rejects Our Waste, What To Do?”)</p>
-            <aside class="pquote2">
-                <blockquote>
-                    <b>“There is no more land to farm. </br> </br>If I don’t do this recycling job, I don’t know how to make money.”</b>
-                </blockquote>
-            </aside>
             <p>David Biderman is the executive director of SWANA, the Solid Waste Association of North America. He says that “National Sword,”
                 and copycat bans throughout Asia, have certainly had an impact at home. In the United States, recycling facilities have “had to
                 address the contamination issue.” With a diminished tolerance for poorly sorted waste, materials recycling facilities have begun
                 slowing down conveyor belts, hiring more people, and buying new equipment.</p>
             <p>“Recycling isn’t collapsing,” he says. “It’s adjusting to a national economic disruption. People are seeing that if this material
                 isn’t moving to China, it needs to be processed somewhere.”</p>
+
+                <aside class="pquote">
+                    <blockquote>
+                        <b>“Recycling isn’t collapsing.</br> </br> It’s adjusting to a national economic disruption.” </br> </br>– David Biderman</b>
+                    </blockquote>
+                </aside>
+
             <p>But where, exactly, should our trash go? One solution is to improve the United State’s domestic infrastructure, which experts
                 say lags behind some countries now spurning our scrap, and break down more of the material ourselves. Another option, according
                 to David Biderman, is to continue exporting waste – ideally, with better quality standards – to countries that will take it.</p>
@@ -492,7 +521,7 @@
     <small>Written by Francesca Fenzi</br>
 Video by Yutao Chen</br>
 Photographs by Yutao Chen</br>
-Web Design by Yutao Chen</br>
+Web Design by Lucio Villa and Yutao Chen</br>
 Additional reporting by Susie Neilson</br>
 Translation by Diep Pham, Diep Nguyen and Alexandre Bui</br>
 </small>
