--- a/src/index.html
+++ b/src/index.html
@@ -58,7 +58,7 @@
 
 
     <div class="embed-container">
-        <iframe src="https://player.vimeo.com/video/331630179?background=1" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+        <iframe src="https://player.vimeo.com/video/332802843?background=1" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
     </div>
 
 
@@ -185,7 +185,7 @@
 
 
     <div class="embed-container">
-        <iframe src="https://player.vimeo.com/video/331629642?background=1" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+        <iframe src="https://player.vimeo.com/video/332802816?background=1" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
     </div>
 
     <div class="spacer"></div>
@@ -505,7 +505,7 @@
             <p>“I think we have to make it clear that if Europe and Africa, America and Asia cannot recycle their trash and [instead] export it to
                 Vietnam, we will become an international landfill,” he says.</p>
             <p>In some respects, the residents of Minh Khai have become captives of their own success. The same trade that provides Cam’s descendents
-                with property is what prevents them from leaving the village. The industry that pays for Tuan’s meals also poisons them. Huan and Hahn
+                with property is what prevents them from leaving the village. The industry that pays for Tuan’s meals also poisons them. Huan and Hanh
                 are responsible for both founding Minh Khai’s dominant profession, and making reparations for it.</p>
             <p>“It’s very easy, from a perspective of living in California, to look and say this is really terrible, oppressive, dirty business,”
                 says Michael DiGregorio. But: “People earn their living on it.”</p>
@@ -527,10 +527,11 @@ Translation by Diep Pham, Diep Nguyen and Alexandre Bui</br>
 </small>
 </div>
 
+
     <script src="app.js" async></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/skrollr/0.6.30/skrollr.min.js"></script>
     <script>
-    var s = skrollr.init();
+    var s = skrollr.init({forceHeight:false});
     </script>
     <%= t.include("partials/_footer.html") %>
     <%= t.include("partials/_analytics.html", grunt.data.json) %>
