--- a/src/index.html
+++ b/src/index.html
@@ -302,7 +302,7 @@
     </section>
 
     <div class="embed-container">
-        <iframe src="https://player.vimeo.com/video/331630170?background=1" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+        <iframe src="https://player.vimeo.com/video/332802836?background=1" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
     </div>
 
     <section id="nineth">
@@ -341,6 +341,11 @@
                 Workers wear masks to protect themselves from pollutants during the day, but not at night when they sleep. Toxins in the air,
                 meanwhile, remain constant.<p>
             <p>“So many people suffer from allergies,” Thao says. “The smoke released when making nylon and plastic is extremely polluted.”</p>
+
+            <div class="embed-container">
+                <iframe src="https://player.vimeo.com/video/332802832?background=1" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+            </div>
+
             <p>The air in Minh Khai, government officials have concluded, contains massive amounts of NH4+, also known as “atmospheric ammonia.”
                 As a result of the recycling process, which requires the melting and burning of plastics, workers have been releasing NH4+ and other
                 highly toxic chemicals – or dioxins – into the atmosphere for nearly half a century. Between the air and the water, residents of
@@ -357,7 +362,7 @@
     </section>
 
     <div class="embed-container">
-        <iframe src="https://player.vimeo.com/video/331629642?background=1" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+        <iframe src="https://player.vimeo.com/video/332802839?background=1" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
     </div>
 
     <section id="tenth">
@@ -410,7 +415,7 @@
 
     <section id="eleventh">
         <article>
-          <div data-100-bottom-top="transform:scale(1.3);opacity:0;" data-center-center="transform:scale(1);opacity:1;" class="linebreak">
+          <div class="linebreak">
                 <h2><span>An Uncertain Future</span></h2>
             </div>
             <p>The conflict between Vietnam’s commercial and environmental priorities came to a head last fall, according to Tuan Nguyen,
@@ -419,7 +424,7 @@
             <p>“There were thousands of scrap containers backlogged in Vietnam’s ports,” he says. The Ministry of Natural Resources and
                 Environment was quickly ordered to investigate the problem, and to “prevent Vietnam from becoming the world’s landfill.”</p>
             <div class="embed-container">
-                <iframe src="https://player.vimeo.com/video/331629650?background=1" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+                <iframe src="https://player.vimeo.com/video/332802827?background=1" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
             </div>
             <p>Plastics that had previously flowed into China and Hong Kong were now arriving on Vietnam’s shores. (The state of California
                 sent more than twice as many tons of plastic waste to Vietnam in 2018 as it did the previous year.) In an attempt to stem the
@@ -482,7 +487,7 @@
     </section>
 
     <div class="embed-container">
-        <iframe src="https://player.vimeo.com/video/331629627?background=1" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+        <iframe src="https://player.vimeo.com/video/332802821?background=1" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
     </div>
 
     <section id="thirteenth">
@@ -532,7 +537,7 @@ Translation by Diep Pham, Diep Nguyen and Alexandre Bui</br>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/skrollr/0.6.30/skrollr.min.js"></script>
     <script>
     var s = skrollr.init({forceHeight:false});
-    jQuery(document).ready(function(){
+    jQuery(window).load(function(){
       s.refresh();
     })
     </script>
