--- a/index.html
+++ b/index.html
@@ -678,7 +678,7 @@ Translation by Diep Pham, Diep Nguyen and Alexandre Bui</br>
      	</div>
 
 	    <div class="footer-bottom">
-	  		<div class="footer-bottom-text">© UNSEEN 2019. All Rights Reserved UC BERKELEY GRADUATE SCHOOL OF 	JOURNALISM</div>
+	  		<div class="footer-bottom-text">© UNSEEN 2019. All Rights Reserved</div>
 	  	</div>
 	  	
   	</footer>
