--- a/src/index.html
+++ b/src/index.html
@@ -109,7 +109,7 @@
     </section>
 
 
-    <h3>California's Recyclable Plastic Exports by Region</h3>
+    <h3>California's Recyclable Plastic Exports by Region (2007-2018)</h3>
     <div id="band-graphic" style="height:45vw;">
         <!-- <img style="padding-left: 20vh; padding-right: 20vh; padding-top:20vh; padding-bottom:20vh" src="./assets/graphics.svg"> -->
     </div>
@@ -119,7 +119,7 @@
 
 
     <div class="spacer"></div>
-    <div class="spacer"></div>
+    <h3>California's Recyclable Plastic Exports by Region (2018)</h3>
 
     <div id="map"> </div>
 
