--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
     <div class="fullvideo">
         <div class="close">X</div>
         <div class="fullvideo-wrapper">
-            <div class="embed-container">
+            <div class="embed-container-feature">
                 <iframe src="https://player.vimeo.com/video/332607128" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
             </div>
         </div>
@@ -110,16 +110,12 @@
                 Taiwan, Indonesia and Vietnam in 2017. But the international recycling landscape is rapidly changing – which could be a problem for
                 people on both sides of the globe.</p>
         </article>
-    </section>
-
 
     <div class="embed-container">
         <iframe src="https://player.vimeo.com/video/332802843?background=1" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
     </div>
 
-
-    <div class="spacer"></div>
-
+    </section>
 
     <section id="third">
         <article>
@@ -249,14 +245,12 @@
                 The suburbs of Hanoi comprise dozens of these villages. Some are over one thousand years old, producing handicrafts like silk or ceramics.</p>
             <p>Others, like Minh Khai, have used distinctly 20th century means to build their names – in fact, entire capsule economies.</p>
         </article>
-    </section>
-
 
     <div class="embed-container">
         <iframe src="https://player.vimeo.com/video/332802816?background=1" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
     </div>
 
-    <div class="spacer"></div>
+    </section>
 
     <section id="sixth">
         <article>
@@ -367,11 +361,12 @@
                 Protection, nearly half of all American plastic exports shifted to Thailand, Malaysia and Vietnam. And as the flow of foreign plastic
                 into Vietnam increased, the problems multiplied.</p>
         </article>
-    </section>
 
     <div class="embed-container">
         <iframe src="https://player.vimeo.com/video/332802836?background=1" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
     </div>
+
+    </section>
 
     <section id="nineth">
         <article>
@@ -409,11 +404,6 @@
                 Workers wear masks to protect themselves from pollutants during the day, but not at night when they sleep. Toxins in the air,
                 meanwhile, remain constant.<p>
             <p>“So many people suffer from allergies,” Thao says. “The smoke released when making nylon and plastic is extremely polluted.”</p>
-
-            <div class="embed-container">
-                <iframe src="https://player.vimeo.com/video/332802832?background=1" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
-            </div>
-
             <p>The air in Minh Khai, government officials have concluded, contains massive amounts of NH4+, also known as “atmospheric ammonia.”
                 As a result of the recycling process, which requires the melting and burning of plastics, workers have been releasing NH4+ and other
                 highly toxic chemicals – or dioxins – into the atmosphere for nearly half a century. Between the air and the water, residents of
@@ -427,11 +417,13 @@
                 absorbed by fat tissue and stored. The higher an animal is on that chain, the higher the concentration of dioxins. With a half-life
                 of 7 to 11 years, it’s likely that every person in Minh Khai now carries the legacy of recycling on a cellular level.</p>
         </article>
-    </section>
+
 
     <div class="embed-container">
         <iframe src="https://player.vimeo.com/video/332802839?background=1" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
     </div>
+
+      </section>
 
     <section id="tenth">
         <article>
@@ -491,9 +483,11 @@
                 China’s “National Sword” policy, government officials were at a loss.</p>
             <p>“There were thousands of scrap containers backlogged in Vietnam’s ports,” he says. The Ministry of Natural Resources and
                 Environment was quickly ordered to investigate the problem, and to “prevent Vietnam from becoming the world’s landfill.”</p>
+
             <div class="embed-container">
                 <iframe src="https://player.vimeo.com/video/332802827?background=1" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
             </div>
+
             <p>Plastics that had previously flowed into China and Hong Kong were now arriving on Vietnam’s shores. (The state of California
                 sent more than twice as many tons of plastic waste to Vietnam in 2018 as it did the previous year.) In an attempt to stem the
                 tide of unwanted recyclables, ministry bureaucrats proposed the obvious solution: a ban to mirror “National Sword.”</p>
@@ -522,11 +516,17 @@
             <p>What remains less clear is what will happen in places like Minh Khai, which have embraced and evolved around a commodity that,
                 for decades, no one else wanted.</p>
         </article>
+
+        <div class="embed-container">
+            <iframe src="https://player.vimeo.com/video/332802832?background=1" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+        </div>
+
     </section>
 
 
     <section id="twelfth">
         <article>
+
             <p>Minh Khai’s future is as murky as the water in its last and only lake. There were once dozens of ponds and estuaries near the village,
                 but most were filled in to satisfy a growing demand for factory real estate. This opaque green pool is all that remains of the area’s
                 once lush wetlands.</p>
@@ -552,11 +552,12 @@
                 make in Minh Khai, but the work comes with fewer risks.</p>
             <p>“They don’t have to collect trash,” he says. “That’s enough.”</p>
         </article>
-    </section>
 
     <div class="embed-container">
         <iframe src="https://player.vimeo.com/video/332802821?background=1" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
     </div>
+
+    </section>
 
     <section id="thirteenth">
         <article>
@@ -605,6 +606,7 @@ Translation by Diep Pham, Diep Nguyen and Alexandre Bui</br>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/topojson/3.0.2/topojson.min.js"></script>
     <script src="https://d3js.org/d3-geo-projection.v1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/skrollr/0.6.30/skrollr.min.js"></script>
+    <script src="https://player.vimeo.com/api/player.js"></script>
     <script src="app.js" async></script>
 
 
@@ -680,8 +682,9 @@ Translation by Diep Pham, Diep Nguyen and Alexandre Bui</br>
     var path2 = d3.geoPath().projection(projection2);
 
     var svg = d3.select("#map").append("svg")
-      .attr("width", width)
-      .attr("height", height);
+      .attr("width", "100%")
+      .attr("height", "100%")
+      .attr("viewBox", "0 0 " + width + " " + height);
 
     // Create a few groups to layer elements correctly
     var g1 = svg.append("g");
