--- a/src/index.html
+++ b/src/index.html
@@ -21,14 +21,21 @@
             <div class="bg-video"><iframe src="https://player.vimeo.com/video/333004319?background=1" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe></div>
         </div>
         <div class="title">
-            <h1 style="width:800px ! important; padding-bottom: 10px ! important;"><img src="./assets/title.png"></h1>
+            <img src="./assets/title.png">
             <div class="deck">Plastic recyclers in Minh Khai, Vietnam wrestle with the blessings and curses of an empire
                 built on our trash.</div>
             <div class="deck"></br>By Francesca Fenzi and Yutao Chen</div>
             <div id="play-video" class="film">PLAY</div>
-            <small class="scroll">SCROLL TO READ</small>
+            <!-- <small class="scroll">SCROLL TO READ</small> -->
+            <div class="scroll">
+              <div class="chevron"></div>
+              <div class="chevron"></div>
+              <div class="chevron"></div>
+              <span class="text">Scroll down</span>
+            </div>
         </div>
     </section>
+
     <div class="fullvideo">
         <div class="close">X</div>
         <div class="fullvideo-wrapper">
@@ -37,6 +44,7 @@
             </div>
         </div>
     </div>
+
     <div class="spacer"></div>
     <section id="second">
         <article data-50-bottom-top="opacity:0; transform:scale(1.1);" data-100-center-center="opacity:1; transform:scale(1);">
